--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.0-rc.6",
     "vuex": "^3.5.1"
