--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
     "socket.io-client": "^2.3.0",
+    "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-js-modal": "^2.0.0-rc.6",
     "vuex": "^3.5.1"
   },
