--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
     "socket.io-client": "^2.3.0",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
     "vue-clipboard2": "^0.3.1",
     "vue-js-modal": "^2.0.0-rc.6",
+    "vue-resize-text": "^0.1.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
